Data Science code

--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -3611,15 +3611,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['Titulo'] = data['Titulo'].apply(lambda x: x if x in ['Master', \\\n",
-    "                                                        'Miss', \\\n",
-    "                                                        'Mr', \\\n",
-    "                                                        'Mrs'] else 'Outros')"
+    "#data['Titulo'] = data['Titulo'].apply(lambda x: x if x in ['Master', \\\n",
+    "#                                                        'Miss', \\\n",
+    "#                                                        'Mr', \\\n",
+    "#                                                        'Mrs'] else 'Outros')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['Titulo'] = data['Titulo'].apply(lambda x: 'Outros' if x not in ['Master', \\\n",
+    "                                                        'Miss', \\\n",
+    "                                                        'Mr', \\\n",
+    "                                                        'Mrs'] else x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -3692,7 +3704,7 @@
        "Outros     20       7"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4114,7 +4126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -4128,13 +4140,275 @@
        "dtype: object"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data[['Titulo', 'Sexo', 'Idade', 'Classe', 'Sobreviveu']].loc[data['Titulo'] == 'Master'].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cabine = pd.read_csv(r'titanic/train.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     NaN\n",
+       "1     C85\n",
+       "2     NaN\n",
+       "3    C123\n",
+       "4     NaN\n",
+       "Name: Cabin, dtype: object"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cabine['Cabin'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for idx, _ in cabine[['Cabin']].dropna().iterrows():\n",
+    "    cabine['Cabin'].at[idx] = cabine['Cabin'].at[idx][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cabine = cabine.dropna(subset=['Cabin'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Survived</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">A</th>\n",
+       "      <th>female</th>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>male</th>\n",
+       "      <td>0.428571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">B</th>\n",
+       "      <th>female</th>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>male</th>\n",
+       "      <td>0.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">C</th>\n",
+       "      <th>female</th>\n",
+       "      <td>0.888889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>male</th>\n",
+       "      <td>0.343750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">D</th>\n",
+       "      <th>female</th>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>male</th>\n",
+       "      <td>0.466667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">E</th>\n",
+       "      <th>female</th>\n",
+       "      <td>0.933333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>male</th>\n",
+       "      <td>0.588235</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">F</th>\n",
+       "      <th>female</th>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>male</th>\n",
+       "      <td>0.375000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>G</th>\n",
+       "      <th>female</th>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>T</th>\n",
+       "      <th>male</th>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Survived\n",
+       "Cabin Sex             \n",
+       "A     female  1.000000\n",
+       "      male    0.428571\n",
+       "B     female  1.000000\n",
+       "      male    0.400000\n",
+       "C     female  0.888889\n",
+       "      male    0.343750\n",
+       "D     female  1.000000\n",
+       "      male    0.466667\n",
+       "E     female  0.933333\n",
+       "      male    0.588235\n",
+       "F     female  1.000000\n",
+       "      male    0.375000\n",
+       "G     female  0.500000\n",
+       "T     male    0.000000"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cabine[['Cabin', 'Survived', 'Sex']].groupby(['Cabin', 'Sex']).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>339</th>\n",
+       "      <td>340</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Blackwell, Mr. Stephen Weart</td>\n",
+       "      <td>male</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113784</td>\n",
+       "      <td>35.5</td>\n",
+       "      <td>T</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     PassengerId  Survived  Pclass                          Name   Sex   Age  \\\n",
+       "339          340         0       1  Blackwell, Mr. Stephen Weart  male  45.0   \n",
+       "\n",
+       "     SibSp  Parch  Ticket  Fare Cabin Embarked  \n",
+       "339      0      0  113784  35.5     T        S  "
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cabine.loc[cabine['Cabin'] == 'T']"
    ]
   },
   {
