--- a/ptbl3_shares.ipynb
+++ b/ptbl3_shares.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,74 +60,86 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>data</th>\n",
-       "      <th>abertura</th>\n",
-       "      <th>maxima</th>\n",
-       "      <th>minima</th>\n",
-       "      <th>fechamento</th>\n",
-       "      <th>volume</th>\n",
+       "      <th>&lt;DATE&gt;</th>\n",
+       "      <th>&lt;OPEN&gt;</th>\n",
+       "      <th>&lt;HIGH&gt;</th>\n",
+       "      <th>&lt;LOW&gt;</th>\n",
+       "      <th>&lt;CLOSE&gt;</th>\n",
+       "      <th>&lt;TICKVOL&gt;</th>\n",
+       "      <th>&lt;VOL&gt;</th>\n",
+       "      <th>&lt;SPREAD&gt;</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>2016-01-04</td>\n",
+       "      <td>2016.01.04</td>\n",
        "      <td>1.89</td>\n",
        "      <td>1.89</td>\n",
        "      <td>1.72</td>\n",
        "      <td>1.73</td>\n",
+       "      <td>58</td>\n",
        "      <td>61400</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>2016-01-05</td>\n",
+       "      <td>2016.01.05</td>\n",
        "      <td>1.73</td>\n",
        "      <td>1.77</td>\n",
        "      <td>1.66</td>\n",
        "      <td>1.75</td>\n",
+       "      <td>42</td>\n",
        "      <td>97000</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>2016-01-06</td>\n",
+       "      <td>2016.01.06</td>\n",
        "      <td>1.75</td>\n",
        "      <td>1.75</td>\n",
        "      <td>1.70</td>\n",
        "      <td>1.74</td>\n",
+       "      <td>26</td>\n",
        "      <td>56900</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>2016-01-07</td>\n",
+       "      <td>2016.01.07</td>\n",
        "      <td>1.78</td>\n",
        "      <td>1.78</td>\n",
        "      <td>1.66</td>\n",
        "      <td>1.71</td>\n",
+       "      <td>38</td>\n",
        "      <td>52400</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>2016-01-08</td>\n",
+       "      <td>2016.01.08</td>\n",
        "      <td>1.69</td>\n",
        "      <td>1.77</td>\n",
        "      <td>1.69</td>\n",
        "      <td>1.71</td>\n",
+       "      <td>33</td>\n",
        "      <td>20000</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        data  abertura  maxima  minima  fechamento  volume\n",
-       "0 2016-01-04      1.89    1.89    1.72        1.73   61400\n",
-       "1 2016-01-05      1.73    1.77    1.66        1.75   97000\n",
-       "2 2016-01-06      1.75    1.75    1.70        1.74   56900\n",
-       "3 2016-01-07      1.78    1.78    1.66        1.71   52400\n",
-       "4 2016-01-08      1.69    1.77    1.69        1.71   20000"
+       "       <DATE>  <OPEN>  <HIGH>  <LOW>  <CLOSE>  <TICKVOL>  <VOL>  <SPREAD>\n",
+       "0  2016.01.04    1.89    1.89   1.72     1.73         58  61400         1\n",
+       "1  2016.01.05    1.73    1.77   1.66     1.75         42  97000         1\n",
+       "2  2016.01.06    1.75    1.75   1.70     1.74         26  56900         1\n",
+       "3  2016.01.07    1.78    1.78   1.66     1.71         38  52400         1\n",
+       "4  2016.01.08    1.69    1.77   1.69     1.71         33  20000         1"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -162,74 +174,86 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>data</th>\n",
-       "      <th>abertura</th>\n",
-       "      <th>maxima</th>\n",
-       "      <th>minima</th>\n",
-       "      <th>fechamento</th>\n",
-       "      <th>volume</th>\n",
+       "      <th>&lt;DATE&gt;</th>\n",
+       "      <th>&lt;OPEN&gt;</th>\n",
+       "      <th>&lt;HIGH&gt;</th>\n",
+       "      <th>&lt;LOW&gt;</th>\n",
+       "      <th>&lt;CLOSE&gt;</th>\n",
+       "      <th>&lt;TICKVOL&gt;</th>\n",
+       "      <th>&lt;VOL&gt;</th>\n",
+       "      <th>&lt;SPREAD&gt;</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>1005</td>\n",
-       "      <td>2020-01-27</td>\n",
+       "      <td>2020.01.27</td>\n",
        "      <td>6.60</td>\n",
        "      <td>6.60</td>\n",
        "      <td>6.21</td>\n",
        "      <td>6.22</td>\n",
+       "      <td>3728</td>\n",
        "      <td>2044000</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1006</td>\n",
-       "      <td>2020-01-28</td>\n",
+       "      <td>2020.01.28</td>\n",
        "      <td>6.34</td>\n",
        "      <td>6.48</td>\n",
        "      <td>6.04</td>\n",
        "      <td>6.48</td>\n",
+       "      <td>2912</td>\n",
        "      <td>1697300</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1007</td>\n",
-       "      <td>2020-01-29</td>\n",
+       "      <td>2020.01.29</td>\n",
        "      <td>6.51</td>\n",
        "      <td>6.55</td>\n",
        "      <td>6.11</td>\n",
        "      <td>6.11</td>\n",
+       "      <td>1803</td>\n",
        "      <td>1105000</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1008</td>\n",
-       "      <td>2020-01-30</td>\n",
+       "      <td>2020.01.30</td>\n",
        "      <td>6.00</td>\n",
        "      <td>6.04</td>\n",
        "      <td>5.80</td>\n",
        "      <td>5.95</td>\n",
+       "      <td>2805</td>\n",
        "      <td>1140400</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1009</td>\n",
-       "      <td>2020-01-31</td>\n",
+       "      <td>2020.01.31</td>\n",
        "      <td>5.90</td>\n",
        "      <td>5.98</td>\n",
        "      <td>5.76</td>\n",
        "      <td>5.98</td>\n",
+       "      <td>1533</td>\n",
        "      <td>693300</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           data  abertura  maxima  minima  fechamento   volume\n",
-       "1005 2020-01-27      6.60    6.60    6.21        6.22  2044000\n",
-       "1006 2020-01-28      6.34    6.48    6.04        6.48  1697300\n",
-       "1007 2020-01-29      6.51    6.55    6.11        6.11  1105000\n",
-       "1008 2020-01-30      6.00    6.04    5.80        5.95  1140400\n",
-       "1009 2020-01-31      5.90    5.98    5.76        5.98   693300"
+       "          <DATE>  <OPEN>  <HIGH>  <LOW>  <CLOSE>  <TICKVOL>    <VOL>  <SPREAD>\n",
+       "1005  2020.01.27    6.60    6.60   6.21     6.22       3728  2044000         1\n",
+       "1006  2020.01.28    6.34    6.48   6.04     6.48       2912  1697300         1\n",
+       "1007  2020.01.29    6.51    6.55   6.11     6.11       1803  1105000         1\n",
+       "1008  2020.01.30    6.00    6.04   5.80     5.95       2805  1140400         1\n",
+       "1009  2020.01.31    5.90    5.98   5.76     5.98       1533   693300         0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +304,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +333,7 @@
        "1004"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +361,7 @@
        "Name: 1004, dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +381,7 @@
        "6.007142857142858"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,208 +401,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "data['data'] = pd.to_datetime(data['data'], format='%Y.%m.%d')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>data</th>\n",
-       "      <th>abertura</th>\n",
-       "      <th>maxima</th>\n",
-       "      <th>minima</th>\n",
-       "      <th>fechamento</th>\n",
-       "      <th>volume</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>count</td>\n",
-       "      <td>1010</td>\n",
-       "      <td>1010.000000</td>\n",
-       "      <td>1010.000000</td>\n",
-       "      <td>1010.000000</td>\n",
-       "      <td>1010.000000</td>\n",
-       "      <td>1.010000e+03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>unique</td>\n",
-       "      <td>1010</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>top</td>\n",
-       "      <td>2017-10-30 00:00:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>freq</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>first</td>\n",
-       "      <td>2016-01-04 00:00:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>last</td>\n",
-       "      <td>2020-01-31 00:00:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>mean</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.737089</td>\n",
-       "      <td>3.794693</td>\n",
-       "      <td>3.663653</td>\n",
-       "      <td>3.730317</td>\n",
-       "      <td>4.842368e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>std</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.237087</td>\n",
-       "      <td>1.253343</td>\n",
-       "      <td>1.216865</td>\n",
-       "      <td>1.238275</td>\n",
-       "      <td>4.680933e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>min</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.510000</td>\n",
-       "      <td>1.530000</td>\n",
-       "      <td>1.480000</td>\n",
-       "      <td>1.510000</td>\n",
-       "      <td>4.000000e+03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>25%</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.502500</td>\n",
-       "      <td>2.542500</td>\n",
-       "      <td>2.452500</td>\n",
-       "      <td>2.500000</td>\n",
-       "      <td>2.151500e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>50%</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.965000</td>\n",
-       "      <td>4.025000</td>\n",
-       "      <td>3.885000</td>\n",
-       "      <td>3.950000</td>\n",
-       "      <td>3.541500e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>75%</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4.850000</td>\n",
-       "      <td>4.900000</td>\n",
-       "      <td>4.770000</td>\n",
-       "      <td>4.850000</td>\n",
-       "      <td>6.116000e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>max</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6.660000</td>\n",
-       "      <td>6.700000</td>\n",
-       "      <td>6.500000</td>\n",
-       "      <td>6.700000</td>\n",
-       "      <td>6.000000e+06</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       data     abertura       maxima       minima  \\\n",
-       "count                  1010  1010.000000  1010.000000  1010.000000   \n",
-       "unique                 1010          NaN          NaN          NaN   \n",
-       "top     2017-10-30 00:00:00          NaN          NaN          NaN   \n",
-       "freq                      1          NaN          NaN          NaN   \n",
-       "first   2016-01-04 00:00:00          NaN          NaN          NaN   \n",
-       "last    2020-01-31 00:00:00          NaN          NaN          NaN   \n",
-       "mean                    NaN     3.737089     3.794693     3.663653   \n",
-       "std                     NaN     1.237087     1.253343     1.216865   \n",
-       "min                     NaN     1.510000     1.530000     1.480000   \n",
-       "25%                     NaN     2.502500     2.542500     2.452500   \n",
-       "50%                     NaN     3.965000     4.025000     3.885000   \n",
-       "75%                     NaN     4.850000     4.900000     4.770000   \n",
-       "max                     NaN     6.660000     6.700000     6.500000   \n",
-       "\n",
-       "         fechamento        volume  \n",
-       "count   1010.000000  1.010000e+03  \n",
-       "unique          NaN           NaN  \n",
-       "top             NaN           NaN  \n",
-       "freq            NaN           NaN  \n",
-       "first           NaN           NaN  \n",
-       "last            NaN           NaN  \n",
-       "mean       3.730317  4.842368e+05  \n",
-       "std        1.238275  4.680933e+05  \n",
-       "min        1.510000  4.000000e+03  \n",
-       "25%        2.500000  2.151500e+05  \n",
-       "50%        3.950000  3.541500e+05  \n",
-       "75%        4.850000  6.116000e+05  \n",
-       "max        6.700000  6.000000e+06  "
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.groupby('data')."
    ]
   },
   {
