--- a/EstatisticaII.ipynb
+++ b/EstatisticaII.ipynb
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
        "       163.84615385, 181.38461538, 198.92307692, 216.46153846])"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 346,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
        "       163.84615385, 181.38461538, 198.92307692, 216.46153846])"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 347,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +958,7 @@
        "       163.84615385, 181.38461538, 198.92307692, 216.46153846])"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 348,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1031,7 @@
        "((891, 11), (418, 10))"
       ]
      },
-     "execution_count": 297,
+     "execution_count": 353,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 356,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [
     {
@@ -1113,20 +1113,19 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 301,
+     "execution_count": 357,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#A regressão linear será utilizada para estimar a Idade dos passageiros\n",
-    "#A série Cabine será desconsiderada pela quantidade de dados nulos\n",
     "data.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1136,17 +1135,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Descartar coluna Cabine\n",
+    "#Descartar coluna Cabine por conter muitos dados nulos\n",
     "data.drop('Cabine', axis=1, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1154,7 @@
        "array(['S', 'C', 'Q', nan], dtype=object)"
       ]
      },
-     "execution_count": 304,
+     "execution_count": 360,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1175,7 @@
        "'S'"
       ]
      },
-     "execution_count": 305,
+     "execution_count": 361,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1188,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1197,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [
     {
@@ -1206,20 +1205,20 @@
        "33.2954792813456"
       ]
      },
-     "execution_count": 307,
+     "execution_count": 363,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Preencher Tarifa com a média de\n",
+    "#Preencher dados nulos de Tarifas com a média de\n",
     "media = data['Tarifa'].mean()\n",
     "media"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1228,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1246,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 309,
+     "execution_count": 365,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1258,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [
     {
@@ -1284,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1295,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [
     {
@@ -1313,13 +1312,503 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 312,
+     "execution_count": 368,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 369,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "IdPassageiro\n",
+       "1                              Braund, Mr. Owen Harris\n",
+       "2    Cumings, Mrs. John Bradley (Florence Briggs Th...\n",
+       "3                               Heikkinen, Miss. Laina\n",
+       "4         Futrelle, Mrs. Jacques Heath (Lily May Peel)\n",
+       "5                             Allen, Mr. William Henry\n",
+       "Name: Nome, dtype: object"
+      ]
+     },
+     "execution_count": 369,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Utilizar-se da engenharia de recursos pra criar uma coluna com base\n",
+    "#no título do nome.\n",
+    "data['Nome'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 371,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['Titulo'] = data['Nome'].str.extract('(\\w+)\\.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 375,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Sexo</th>\n",
+       "      <th>homem</th>\n",
+       "      <th>mulher</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Titulo</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Capt</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Col</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Countess</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Don</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dona</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dr</th>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Jonkheer</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lady</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Major</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Master</th>\n",
+       "      <td>61</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Miss</th>\n",
+       "      <td>0</td>\n",
+       "      <td>260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mlle</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mme</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mr</th>\n",
+       "      <td>757</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mrs</th>\n",
+       "      <td>0</td>\n",
+       "      <td>197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ms</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rev</th>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sir</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Sexo      homem  mulher\n",
+       "Titulo                 \n",
+       "Capt          1       0\n",
+       "Col           4       0\n",
+       "Countess      0       1\n",
+       "Don           1       0\n",
+       "Dona          0       1\n",
+       "Dr            7       1\n",
+       "Jonkheer      1       0\n",
+       "Lady          0       1\n",
+       "Major         2       0\n",
+       "Master       61       0\n",
+       "Miss          0     260\n",
+       "Mlle          0       2\n",
+       "Mme           0       1\n",
+       "Mr          757       0\n",
+       "Mrs           0     197\n",
+       "Ms            0       2\n",
+       "Rev           8       0\n",
+       "Sir           1       0"
+      ]
+     },
+     "execution_count": 375,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.crosstab(data['Titulo'], data['Sexo'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 377,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Mr', 'Mrs', 'Miss', 'Master', 'Outros'], dtype=object)"
+      ]
+     },
+     "execution_count": 377,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Alguns títulos serão generalizados para facilitar a categorização\n",
+    "data['Titulo'].apply(lambda x: 'Outros' if x not in ['Master',\n",
+    "                                                    'Miss',\n",
+    "                                                    'Mr',\n",
+    "                                                    'Mrs'] else x).unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 379,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['Titulo'] = data['Titulo'].apply(lambda x: 'Outros' if x not in ['Master',\n",
+    "                                                    'Miss',\n",
+    "                                                    'Mr',\n",
+    "                                                    'Mrs'] else x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 392,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Sexo</th>\n",
+       "      <th>homem</th>\n",
+       "      <th>mulher</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Titulo</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Master</th>\n",
+       "      <td>61</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Miss</th>\n",
+       "      <td>0</td>\n",
+       "      <td>260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mr</th>\n",
+       "      <td>757</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mrs</th>\n",
+       "      <td>0</td>\n",
+       "      <td>197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Outros</th>\n",
+       "      <td>25</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Sexo    homem  mulher\n",
+       "Titulo               \n",
+       "Master     61       0\n",
+       "Miss        0     260\n",
+       "Mr        757       0\n",
+       "Mrs         0     197\n",
+       "Outros     25       9"
+      ]
+     },
+     "execution_count": 392,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Traduzir Titulos\n",
+    "pd.crosstab(data['Titulo'], data['Sexo'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 394,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14.5"
+      ]
+     },
+     "execution_count": 394,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.max(data['Idade'].loc[data['Titulo']=='Master'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 396,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "63.0"
+      ]
+     },
+     "execution_count": 396,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.max(data['Idade'].loc[data['Titulo']=='Miss'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 397,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.17"
+      ]
+     },
+     "execution_count": 397,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.min(data['Idade'].loc[data['Titulo']=='Miss'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 401,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32.25215146299484"
+      ]
+     },
+     "execution_count": 401,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(data['Idade'].loc[data['Titulo']=='Mr'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 402,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['Titulo'] = data['Titulo'].map({'Master': 'menino',\n",
+    "                                     'Miss': 'solteira',\n",
+    "                                     'Mr': 'homem adulto',\n",
+    "                                     'Mrs': 'casada'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 403,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Sexo</th>\n",
+       "      <th>homem</th>\n",
+       "      <th>mulher</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Titulo</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>casada</th>\n",
+       "      <td>0</td>\n",
+       "      <td>197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>homem adulto</th>\n",
+       "      <td>757</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>menino</th>\n",
+       "      <td>61</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>solteira</th>\n",
+       "      <td>0</td>\n",
+       "      <td>260</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Sexo          homem  mulher\n",
+       "Titulo                     \n",
+       "casada            0     197\n",
+       "homem adulto    757       0\n",
+       "menino           61       0\n",
+       "solteira          0     260"
+      ]
+     },
+     "execution_count": 403,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.crosstab(data['Titulo'], data['Sexo'])"
    ]
   },
   {
